Fix slider dots size too large

--- a/assets/the4-custom.css
+++ b/assets/the4-custom.css
@@ -5710,3 +5710,11 @@ hdt-reval-items[reveal-on-scroll=true] .hdt-collection-products>.hdt-collection-
   min-height: unset !important;
   padding: 0 !important;
 }
+
+.hdt-slider__products .hdt-slider__dot {
+  min-width: unset !important;
+  min-height: unset !important;
+  padding: 0 !important;
+  margin: 0 !important;
+}
+
